# Solana-random-prize-game

./: Anchor.toml  package.json  random_prize_game-keypair.json
js/: command.js
json/: pool.json
programs/random-prize-game/: Cargo.toml
programs/random-prize-game/src/: lib.rs
tests/: random-prize-game.ts
